# FastAPI-Template

./: .env  .env.example  .env.prod  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/auth/: auth_dependencies.py  auth_dtos.py  auth_exceptions.py  auth_provider.py  auth_router.py  auth_service.py  rbac.py
app/api/auth/jwt/: jwt_helper.py
app/api/kafka_demo/: kafka_demo_consumer.py  kafka_demo_dependencies.py  kafka_demo_producer.py  kafka_demo_router.py  kafka_demo_service.py
app/api/token/: __init__.py  token_dependencies.py  token_dtos.py  token_model.py  token_provider.py  token_repository.py  token_service.py
app/api/user/: __init__.py  user_dependencies.py  user_dto.py  user_dtos.py  user_enums.py  user_model.py  user_provider.py  user_repository.py  user_router.py  user_service.py
app/config/: __init__.py  config.py  constans.py
app/config/components/: __init__.py  base_config.py  db_config.py  redis_config.py
app/config/envs/: base_config.py  development_config.py  production_config.py
app/core/config/: __init__.py  config.py  constans.py
app/core/config/components/: __init__.py  db_config.py  jwt_config.py  kafka_config.py  pg_admin_config.py
app/core/consumer_handlers/: consumer_handler.py
app/core/exception_handlers/: __init__.py  auth_exception_handlers.py  domain_exception_handler.py  infrastructure_exception_handler.py  pydantic_exception_handlers.py
app/core/exceptions/: __init__.py  domain_base_exception.py
app/core/ioc/: __init__.py  build_ioc.py
app/core/logger/: logger_config.py
app/core/middlewares/: __init__.py  cors_middleware.py
app/core/server/: app_server.py  broker_server.py  lifespan.py  server.py
app/database/: __init__.py  base.py  database_helper.py  db_decorators.py  db_exceptions.py  db_helper.py
app/error_handlers/: __init__.py  error_handlers.py
app/exception_handlers/: __init__.py  db_exception_handlers.py  jwt_exception_handlers.py
app/infastructure/: __init__.py
app/infastructure/database/: __init__.py  base.py  base_service.py  db_decorators.py  db_dependencies.py  db_domain_exceptions.py  db_exceptions.py  db_helper.py  db_infrastructure_exceptions.py  db_mixins.py
app/infastructure/jwt/: __init__.py  jwt_dependencies.py  jwt_helper.py  jwt_provider.py
app/infastructure/kafka/: __init__.py  kafka_dependencies.py
app/infastructure/kafka/kafka_consumer/: __init__.py  deserializer.py  kafka_consumer.py
app/infastructure/kafka/kafka_producer/: __init__.py  kafka_producer.py  serializer.py
app/infastructure/security/: __init__.py  password_hasher_dependencies.py
app/infrastructure/database/: __init__.py  base_repository.py  db_domain_exceptions.py  db_provider.py  db_response_mixins.py
app/infrastructure/jwt/: jwt_helper.py
app/infrastructure/kafka/: kafka_broker.py  kafka_provider.py
app/infrastructure/security/: password_hasher_provider.py
app/middlewares/: __init__.py  cors_middleware.py
app/server/: lifespan.py  server.py
app/shared/: __init__.py  base_repository.py  base_service.py  exceptions.py  mixins.py
certs/jwt/access_keys/: private.pem  public.pem
certs/jwt/refresh_keys/: private.pem  public.pem
migration/: env.py
src/api/: __init__.py
src/config/: __init__.py  config.py  constans.py
src/config/components/: __init__.py  db_config.py
src/config/envs/: __init__.py  development_config.py  production_config.py
src/core/: config.py
src/database/: __init__.py  base.py  database_helper.py  decorators.py
