[project]
name = "fastapi-template"
version = "0.1.0"
description = "Clean FastAPI Template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "pytz (>=2025.2,<2026.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "uvloop (>=0.22.1,<0.23.0)",
    "httptools (>=0.7.1,<0.8.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "faststream[kafka] (>=0.6.5,<0.7.0)",
    "dishka>=1.8.0",
    "dishka-faststream>=0.6.0",
]

# [tool.uv]
# format = "ruff format . && ruff check . --fix && pyright"
# check = "ruff check . && pyright"
# lint = "ruff check . --fix"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (no print statements)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]

ignore = [
    "E501",    # Line too long (formatter handles this)
    "S603",    # subprocess without shell=True (too strict)
    "S607",    # Starting a process with a partial path (too strict)
    "ANN101",  # Missing type annotation for self (redundant)
    "ANN102",  # Missing type annotation for cls (redundant)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Allow unused imports in __init__.py
]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Don't require annotations in tests
]

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]  # CHANGE THIS
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",  # STRICT: Require 80% coverage
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
